# noriteo

./: Cargo.toml  LICENSE  build.sh  justfile
docs/: just_basic_commands.md  참고용_사이트.md
noriteo-client/: Cargo.toml
noriteo-client/src/: lib.rs
noriteo-server/: Cargo.toml
noriteo-server/src/: main.rs
noriteo-server/templates/: base.html  index.html
